Fix search function does not display properly on mobile

--- a/src/templates/assets/stylesheets/main/components/_search.scss
+++ b/src/templates/assets/stylesheets/main/components/_search.scss
@@ -155,7 +155,7 @@
       // Adjust appearance when search is active
       [data-md-toggle="search"]:checked ~ .md-header & {
         width: 100%;
-        height: 100%;
+        height: 100vh;
         opacity: 1;
         transition:
           width       0ms   0ms,
